Fix team endpoint response
